--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "layers/ngenetzky/meta-ngenetzky"]
 	path = layers/ngenetzky/meta-ngenetzky
 	url = https://github.com/NGenetzky/meta-ngenetzky.git
+[submodule "submodules/kas"]
+	path = submodules/kas
+	url = https://github.com/siemens/kas.git
