--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "layers/ngenetzky/meta-bb-ngenetzky"]
 	path = layers/ngenetzky/meta-bb-ngenetzky
 	url = https://gitlab.com/ngenetzky/meta-bb-ngenetzky.git
+[submodule "layers/ngenetzky/meta-ngenetzky"]
+	path = layers/ngenetzky/meta-ngenetzky
+	url = https://github.com/NGenetzky/meta-ngenetzky.git
